# Pink-Bike-Fantasy-Team-Selector

./: .gitignore  README.md  merge_uci_results.py  requirements.txt  run_all.sh  team_selector.py
PinkBikeFantasyScraper/: .gitignore  file_parser.py  merge_uci_results.py  pyproject.toml  run_all.sh  team_selector.py
tests/: test_fuzzy_match_name.py
